# vulpis

./: .clangd  .gitignore  .gitmodules  .luarc.json  .python-version  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  vcpkg.json
.meta/: vulpis.meta.lua
config/: VP_FONT_CONFIG.lua
engine/: lua.hpp  main.cpp
engine/components/: ui.cpp
engine/components/audio/: audio.cpp  audio.h
engine/components/color/: color.cpp  color.h
engine/components/database/: kv_cache.cpp  kv_cache.h  sqlite_client.cpp  sqlite_client.h
engine/components/input/: input.cpp  input.h
engine/components/layout/: layout.cpp  layout.h  yoga.cpp
engine/components/network/: http_client.cpp  http_client.h
engine/components/network/websockets/: websockets_client.cpp  websockets_client.h
engine/components/renderer/: commands.h  opengl_renderer.cpp  opengl_renderer.h  renderer.h
engine/components/state/: state.cpp  state.h
engine/components/system/: pathUtils.cpp  pathUtils.h  secure_storage.cpp  secure_storage.h  system_bindings.cpp
engine/components/text/: bundled_registry.h  font.cpp  font.h  tvg_ui.cpp  tvg_ui.h
engine/components/ui/: layout.h  ui.cpp  ui.h
engine/components/ui/configLogic/: font_registry.cpp  font_registry.h
engine/components/vdom/: vdom.cpp  vdom.h
engine/configLogic/engineConf/: engine_config.cpp  engine_config.h
engine/configLogic/font/: font_registry.cpp  font_registry.h
engine/configLogic/images/: texture_registry.cpp  texture_registry.h
engine/core/: window.cpp  window.h
engine/scripting/: regsitry.h
engine/tools/: asset_baker.cpp
engine/tools/stats_logger/: stats_logger.cpp  stats_logger.h
lua/: app.lua
lua/ui/: elements.lua
src/: app.lua  main.cpp  ui.cpp
tools/: font_baker.py
utils/core/: elements.lua  flatList.lua  router.lua  store.lua  textInput.lua  tools.lua  virualizedList.lua  ws.lua
vulcli/: README.md  vulcli.py
